# gstreamer-archive

./: .gitignore  README.md
gst-launch/: README.md
http-hot-swap/: README.md
rtsp-hot-swap-with-encoding/: README.md
rtsp-hot-swap-with-encoding/gst-c++/: .gitignore  CMakeLists.txt  README.md  main.cpp
rtsp-hot-swap-with-encoding/gst-python/: README.md
rtsp-hot-swap-with-encoding/rtsp-hot-swap-with-flip-and-brightnes/: cmakelist.txt
rtsp-hot-swap-with-flip-and-brightness/gst-c++/: mian .cpp
rtsp-hot-swap-without-encoding/: README.md
rtsp-to-udp/gst-c++/: CMakeLists.txt  main.cpp
